[package]
name = "SecuritySystem"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.8.1"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"]}
chrono = "0.4.44"
serde = { version = "1", features = ["derive"] }
tower-http = {version = "0.6.2", features = ["cors"]}
tokio-stream = { version = "0.1", features = ["sync"] } 
futures = "0.3"
serde_json = "1.0"
